--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: okteto.dev/hello-world:latest
+        image: quay.io/cata0nana/oc_v1_img
         ports:
         - containerPort: 8080
